CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
endif()

SET(ICMAKER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icmaker)

IF(EXISTS ${ICMAKER_DIRECTORY}/IcMaker.cmake)
  INCLUDE(${ICMAKER_DIRECTORY}/IcMaker.cmake)
ELSE()
  INCLUDE(${ICMAKER_DIRECTORY}/CMakeLists.txt)
ENDIF()

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/packages)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/doc)

#list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../eigen)

IF (EXISTS "${CMAKE_SOURCE_DIR}/script" AND IS_DIRECTORY "${CMAKE_SOURCE_DIR}/script")
  ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/script)
ENDIF ()

include_directories(/usr/local/include)

