<?xml version="1.0"?>
<package format="2">
  <name>gvl_ompl_planning</name>
  <version>0.7.0</version>
  <description>This package contains visualization tools for Franka Emika.</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>icmaker</buildtool_depend>
  <build_depend>gpu_voxels_dyson</build_depend>
  <build_depend>gpu_voxels</build_depend>
  <build_depend>icl_core</build_depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
</package>
